
- Fix possible ArrayIndexOutOfBoundsException in
  DisplayManager.hideLineRange() when narrowing to folds in
  indent-folded buffers.

- Fix for window geometry load/save on multiple monitor setups
  (Gerd Knops).

- If a plugin creates an ActionSet with a null label (which would be a
  bug in the plugin), the Shortcuts option pane didn't work.
}}}

}}}
{{{ Version 4.2pre13

Thanks to Magnus Henriksson, Nicholas O'Leary, Ollie Rutherfurd and
Patrick Tingen for contributing to this release.

{{{ Miscellaneous Changes

- During auto-save, ~/.jedit/perspective.xml is only written if files
  were opened or closed or views were split or unsplit since the last
  time it was auto-saved.

- Greedy_Backspace, _Left and _Right macros (Ollie Rutherfurd).

}}}
{{{ Syntax Highlighting

- Updated Progress syntax highlighting (Patrick Tingen).

- Zope Page Template syntax highlighting (Ollie Rutherfurd).

- Updated XSLT syntax highlighting (Magnus Henriksson).

}}}
{{{ Bug Fixes

- Fix ClassCastException when changing kill ring size.

- QuickNotepad plugin didn't compile.

- jEdit didn't compile with jikes due to overly pedantic inner class
  semantics.

- Pressing "Reload" after "Select All" in the files changed dialog
  didn't work (Nicholas O'Leary).

- Fix a problem where sometimes after loading, only the first line of a
  file would be visible.

- PropertyManager.getProperties() did not include site properties.

- When creating a new file, the horizontal scroll bar was not updated
  correctly.

}}}
{{{ API Changes

- A few methods added to JEditTextArea for Gestures plugin:

  isRightClickPopupEnabled()
  setRightClickPopupEnabled(boolean)
  handlePopupTrigger(MouseEvent)

}}}

}}}

{{{ Version 4.2pre12

Thanks to Lionel Fiol, Nicholas O'Leary, Ollie Rutherfurd and
Thomas Alspaugh for contributing to this release.

{{{ Miscellaneous Changes

- The Buffer Options and Global Options->Editing panes no longer allow